[project]
name = "3pl-multi-agent"
version = "0.3.0"
description = "Zero-Touch 3PL dual-quotation vertical slice"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "mcp>=1.0",
  "pydantic>=2.0",
  "google-adk>=1.0",
  "google-genai>=1.0",
  "ortools>=9.10",
  "stripe>=9",
  "plaid-python>=20",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Kept for backward compat; the SDKs are now core deps so `uv sync` always has them.
payments = ["stripe>=9", "plaid-python>=20"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
